--- a/survey-form.html
+++ b/survey-form.html
@@ -19,26 +19,26 @@
                 <div class="p-2 w-full">
                     <div class="relative">
                       <label for="email" class="leading-7 text-sm">Name</label>
-                      <input type="text" id="name" name="name" placeholder="Enter your name" class="w-full bg-opacity-50 rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8 ">
+                      <input type="text" id="name" name="name" placeholder="Enter your name" class="w-full text-gray-600 bg-opacity-50 rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8 ">
                     </div>
                 </div>
                 <div class="p-2 w-full">
                     <div class="relative">
                       <label for="email" class="leading-7 text-sm">Email</label>
-                      <input type="email" id="email" name="email" placeholder="Enter your email" class="w-full  bg-opacity-50 rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8">
+                      <input type="email" id="email" name="email" placeholder="Enter your email" class="w-full text-gray-600 bg-opacity-50 rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8">
                     </div>
                 </div>
                 <div class="p-2 w-full">
                     <div class="relative">
                       <label for="email" class="leading-7 text-sm">Age(Optional)</label>
-                      <input type="text" id="name" name="name" placeholder="Age" class="w-full rounded border border-gray-300 text-base outline-none  py-1 px-3 leading-8">
+                      <input type="text" id="name" name="name" placeholder="Age" class="w-full text-gray-600 rounded border border-gray-300 text-base outline-none  py-1 px-3 leading-8">
                     </div>
                 </div>
 
                 <div class="p-2 w-full">
                     <div class="relative">
                         <label for="">Which option best describes your current role?</label>
-                        <select class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8" name="prefer">
+                        <select class="w-full text-gray-600 bg-white rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8" name="prefer">
                             <option selected>Select current role ? </option>
                             <option value="student">student</option>
                             <option value="fullTimeJob">Full time job</option>
@@ -81,8 +81,8 @@
 
                 <div class="p-2 w-full">
                     <div class="relative">
-                        <label for="">What is your favorite feature of freeCodeCamp?</label>
-                        <select class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8" name="">
+                        <label for="">What is your favorite feature of Microverse?</label>
+                        <select class="w-full bg-white text-gray-600 rounded border border-gray-300 text-base outline-none py-1 px-3 leading-8" name="">
                             <option selected>Select an Option </option>
                             <option value="challengs">Challenges</option>
                             <option value="projects">Projects</option>
